third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/control_flow/for_loop_comment_following.exp
module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
    public entry fun <SELF>_0() {
        let _t0 = 0;
        let _t1 = false;
        loop {
            if (_t1) _t0 = _t0 + 1 else _t1 = true;
            if (_t0 < 10) continue;
            break
        };
        let _t2 = 0;
        let _t3 = false;
        loop {
            if (_t3) _t2 = _t2 + 1 else _t3 = true;
            if (_t2 < 10) continue;
            break
        };
        let _t4 = 0;
        let _t5 = false;
        loop {
            if (_t5) _t4 = _t4 + 1 else _t5 = true;
            if (_t4 < 10) continue;
            break
        };
        let _t6 = 0;
        let _t7 = false;
        loop {
            if (_t7) _t6 = _t6 + 1 else _t7 = true;
            if (_t6 < 10) continue;
            break
        };
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ for_loop_comment_following.move:1:76
  │
1 │ module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
  │                                                                            ^
  │                                                                            │
  │                                                                            Unexpected '<'
  │                                                                            Expected an identifier
